--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/main.css">
-  <title>Document</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,700,900" rel="stylesheet" />
+  <title>Купить Helmion недорого. Цены, отзывы. Закажите Helmion сейчас!</title>
 </head>
 
 <body>
@@ -15,6 +16,8 @@
   <!--=include template/footer.html -->
 
   <!--=require img/svg/symbols.svg -->
+
+  <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
