yulik add parasites title

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
-  <!--=include template/header.html -->
+  <!--include template/header.html -->
+
+  <!--=include template/parasites.html -->
 
   <!--=include template/footer.html -->
 
