--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,700,900" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700,900" rel="stylesheet" />
   <title>Купить Helmion недорого. Цены, отзывы. Закажите Helmion сейчас!</title>
 </head>
 
@@ -19,6 +19,8 @@
 
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/postDate.js"></script>
+
 </body>
 
 </html>
