add advantages block

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
 
 <body>
   <!--=include template/header.html -->
+  <!--=include template/advantages.html -->
+
 
   <!--=include template/footer.html -->
 
