--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,8 @@
 </head>
 
 <body>
-  <!--=include template/header.html -->
 
-  <!--=include template/footer.html -->
-
-  <!--=require img/svg/symbols.svg -->
+<!--=include template/others.html -->
 
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/main.js"></script>
