--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <!--=include template/header.html -->
   <!--=include template/advantages.html -->
 
-
+  <!--=include template/header.html -->
   <!--=include template/footer.html -->
 
   <!--=require img/svg/symbols.svg -->
