--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,12 @@
 <body>
 
 
-<!--=include template/others.html -->
+
 
   <!--=include template/header.html -->
   <!--=include template/advantages.html -->
-
+  <!--=include template/others.html -->
+  <!--=include template/order.html -->
   <!--=include template/header.html -->
   <!--=include template/footer.html -->
 
