--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,11 @@
 </head>
 
 <body>
-  <!--=include template/header.html -->
+  <!--include template/header.html -->
+
+  <!--=include template/infection.html -->
+
+  <!--=include template/doctor.html -->
 
   <!--=include template/footer.html -->
 
