adaptive header block

--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,12 @@
 <body>
 
   <!--=include template/header.html -->
-  <!--=include template/advantages.html -->
-  <!--=include template/parasites.html -->
-  <!--=include template/others.html -->
-  <!--=include template/order.html -->
-  <!--=include template/header.html -->
-  <!--=include template/footer.html -->
+  <!--include template/parasites.html -->
+  <!--include template/others.html -->
+  <!--include template/advantages.html -->
+  <!--include template/order.html -->
+  <!--include template/header.html -->
+  <!--include template/footer.html -->
 
   <!--=require img/svg/symbols.svg -->
 
