--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700,900" rel="stylesheet" />
+  <link rel="icon" href="img/favicon.ico">
   <title>Купить Helmion недорого. Цены, отзывы. Закажите Helmion сейчас!</title>
 </head>
 
@@ -15,7 +16,7 @@
   <!--=include template/header.html -->
   <!--include template/parasites.html -->
   <!--include template/others.html -->
-  <!--include template/advantages.html -->
+  <!--=include template/advantages.html -->
   <!--include template/order.html -->
   <!--include template/header.html -->
   <!--include template/footer.html -->
