den (material and components)

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,10 @@
 <body>
   <!--=include template/header.html -->
 
+  <!--=include template/material.html -->
+
+  <!--=include template/components.html -->
+
   <!--=include template/footer.html -->
 
   <!--=require img/svg/symbols.svg -->
