yulik add  parasites block

--- a/src/index.html
+++ b/src/index.html
@@ -12,15 +12,15 @@
 
 <body>
 
-  <!--=include template/header.html -->
-  <!--=include template/advantages.html -->
+  <!--include template/header.html -->
+  <!--include template/advantages.html -->
   <!--=include template/parasites.html -->
-  <!--=include template/others.html -->
-  <!--=include template/order.html -->
-  <!--=include template/header.html -->
-  <!--=include template/footer.html -->
+  <!--include template/others.html -->
+  <!--include template/order.html -->
+  <!--include template/header.html -->
+  <!--include template/footer.html -->
 
-  <!--=require img/svg/symbols.svg -->
+  <!--require img/svg/symbols.svg -->
 
 
   <script src="js/jquery-3.3.1.min.js"></script>
