--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,11 @@
     <!--include template/parasites.html -->
     <!--include template/infection.html -->
     <!--include template/others.html -->
-    <!--=include template/advantages.html -->
+    <!--include template/advantages.html -->
     <!--include template/order.html -->
     <!--include template/doctor.html -->
-    <!--=include template/sec5.html -->
-    <!--=include template/sec11.html -->
+    <!--include template/sec5.html -->
+    <!--include template/sec11.html -->
     <!--include template/header.html -->
     <!--include template/footer.html -->
 
@@ -33,10 +33,13 @@
 
   <!--=include template/components.html -->
 
-  <!--=include template/footer.html -->
+  <!--=include template/comments.html -->
+
+  <!--include template/footer.html -->
 
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/jquery.mCustomScrollbar.js"></script>
     <script src="js/main.js"></script>
     <script src="js/postDate.js"></script>
 
