--- a/src/index.html
+++ b/src/index.html
@@ -15,21 +15,21 @@
 
 <body>
 
-  <!--include template/header.html -->
-  <!--include template/material.html -->
+  <!--=include template/header.html -->
+  <!--=include template/material.html -->
   <!--=include template/parasites.html -->
-  <!--include template/infection.html -->
-  <!--include template/sec5.html -->
-  <!--include template/others.html -->
-  <!--include template/advantages.html -->
-  <!--include template/components.html -->
-  <!--include template/doctor.html -->
-  <!--include template/comments.html -->
-  <!--include template/sec11.html -->
-  <!--include template/order.html -->
-  <!--include template/header.html -->
-  <!--include template/footer.html -->
-  <!--include template/popup.html -->
+  <!--=include template/infection.html -->
+  <!--=include template/sec5.html -->
+  <!--=include template/others.html -->
+  <!--=include template/advantages.html -->
+  <!--=include template/components.html -->
+  <!--=include template/doctor.html -->
+  <!--=include template/comments.html -->
+  <!--=include template/sec11.html -->
+  <!--=include template/order.html -->
+  <!--=include template/header.html -->
+  <!--=include template/footer.html -->
+  <!--=include template/popup.html -->
 
 
   <script src="js/jquery-3.3.1.min.js"></script>
