--- a/src/index.html
+++ b/src/index.html
@@ -1,46 +1,45 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700,900"
+      rel="stylesheet"
+    />
+    <link rel="icon" href="img/favicon.ico" />
+    <title>
+      Купить Helmion недорого. Цены, отзывы. Закажите Helmion сейчас!
+    </title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700,900" rel="stylesheet" />
-  <link rel="icon" href="img/favicon.ico">
-  <title>Купить Helmion недорого. Цены, отзывы. Закажите Helmion сейчас!</title>
+  <body>
+    <!--=include template/header.html -->
+    <!--=include template/material.html -->
+    <!--=include template/parasites.html -->
+    <!--=include template/infection.html -->
+    <!--=include template/sec5.html -->
+    <!--=include template/others.html -->
+    <!--=include template/advantages.html -->
+    <!--=include template/components.html -->
+    <!--=include template/doctor.html -->
+    <!--=include template/comments.html -->
+    <!--=include template/sec11.html -->
+    <!--=include template/order.html -->
+    <!--=include template/header.html -->
+    <!--=include template/footer.html -->
+    <!--=include template/popup.html -->
 
-</head>
-
-
-<body>
-
-  <!--=include template/header.html -->
-  <!--=include template/material.html -->
-  <!--=include template/parasites.html -->
-  <!--=include template/infection.html -->
-  <!--=include template/sec5.html -->
-  <!--=include template/others.html -->
-  <!--=include template/advantages.html -->
-  <!--=include template/components.html -->
-  <!--=include template/doctor.html -->
-  <!--=include template/comments.html -->
-  <!--=include template/sec11.html -->
-  <!--=include template/order.html -->
-  <!--=include template/header.html -->
-  <!--=include template/footer.html -->
-  <!--=include template/popup.html -->
-
-
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/wow.min.js"></script>
-  <script src="js/slick.min.js"></script>
-  <script src="js/jquery.mCustomScrollbar.js"></script>
-  <script src="js/main.js"></script>
-  <script src="js/postDate.js"></script>
-  <script src="js/everad.js"></script>
-
-
-</body>
-
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/jquery.mCustomScrollbar.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/postDate.js"></script>
+    <script src="js/everad.js"></script>
+    <script src="js/youtube.js"></script>
+    <script src="js/audio.js"></script>
+  </body>
 </html>
